--- a/index.html
+++ b/index.html
@@ -5,9 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap"rel="stylesheet"/>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <h1>Project One</h1>
+    <section>
+        <div class="half-area">
+            <h1>  <span>Skip</span> the Diet, Just Eat Healthy With Food Network</h1>
+            <p>While Katie Lee makes Creamy Kale and Eggs for breakfast, the chefs discuss their New Year's resolutions. They also introduce and prepare delicious dishes to help viewers get dinner on the table. They debate the merits of several kitchen gadgets versus a good paring knife and Geoffrey Zakarian makes a Red Velvet Cocktail while the chefs dish on what they're "Into and Over" this week.
+                Food, substance consisting essentially of protein, carbohydrate, fat, and other nutrients used in the body of an organism to sustain growth and vital processes and to furnish energy. The absorption and utilization of food by the body is fundamental to nutrition and is facilitated by digestion. Plants, which convert solar energy to food by photosynthesis, are the primary food source..</p>
+            <a class="common-btn" href="https://hungrynaki.com" target="_blank">Order Food</a>
+        </div>
+        <div class="half-area">
+            <img class="top-right-img" src="images/female/1.png" alt="">
+        </div>
+    </section>
+    <section class="about-section">
+        <div class="half-area">
+            <img src="images/female/2.png" alt="">
+        </div>
+        <div class="half-area">
+            <h2>About Me</h2>
+            <p>In some areas, "fast" is a good thing. When it comes to improving your running or walking pace, completing a dreaded task or even losing weight (safely, of course)—well, the faster, the better. Fast traffic, fast money, fast meetings: all good. But when it comes to fast food? Not so much. We've all been in that situation when, strapped for time or lagging in energy, we give into the tempting convenience, quickness and maybe even the crave-worthy taste of a drive-thru meal. But the short-term rewards are quickly eclipsed by the nagging guilt of consuming food (and we use that term loosely) that, in most cases, provides little to no nutritive benefit and exceeds our allotment of calories, saturated fat, sodium and sugar. Let's face it: There's nothing fun about entering a Big Mac and fries into your Nutrition Tracker. That said, the occasional window pickup doesn't have to completely derail your progress, Sohel Rana</p>
+            <a class="common-btn" href="www.rashedratan.xyz" target="_blank">Contact Me</a>
+        </div>
+    </section>
+
+    <section class="recipes-section">
+        <h3>My Recipies</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, iste. Distinctio numquam ab magnam placeat molestias obcaecati iure ullam officiis amet consectetur adipisicing elit. Ea, iste. Distinctio numquam ab magnam placeat molestias obcaecati iure ullam officiis.</p>
+        <div class="recipies-items">
+            <img src="images/food/1.png" alt="">
+            <h3>Title Here</h3>
+            <p class="recipies-item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, mollitia?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, mollitia?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, mollitia?</p>
+        </div>
+        <div class="recipies-items">
+            <img src="images/food/2.png" alt="">
+            <h3>Title Here</h3>
+            <p class="recipies-item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, mollitia?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, mollitia?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, mollitia?</p>
+        </div>
+        <div class="recipies-items">
+            <img src="images/food/3.png" alt="">
+            <h3>Title Here</h3>
+            <p class="recipies-item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, mollitia?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, mollitia?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, mollitia?</p>
+        </div>
+    </section>
+
 </body>
 </html>
