last two part ok

--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@
             <p class="recipies-item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, mollitia?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, mollitia?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, mollitia?</p>
         </div>
     </section>
+    <div class="social-counter">
+        <div class="social-item">
+            <h1>700K</h1>
+            <P>Youtube Subscriber</P>
+        </div>
+        <div class="social-item">
+            <h1>3.5m</h1>
+            <P>Instagram Followers</P>
+        </div>
+        <div class="social-item">
+            <h1>900K</h1>
+            <P>Facebook Followers</P>
+        </div>
+    </div>
+    <footer>
+        <h1>Food <span>Network</span> </h1>
+        <p>copyRight@2022 food network</p>
 
+    </footer>
 </body>
 </html>
