--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
 
 </head>
 <body>
+
+    <section class="header-top">
+        <div class="half-area">
+            <div class="logo">
+                <img src="images/logo.png" alt="">
+            </div>
+        </div>
+        <div class="half-area">
+            <div class="main-menu">
+                <ul>
+                    <li><a class="home active" href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Food</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
     <section>
         <div class="half-area">
             <h1>  <span>Skip</span> the Diet, Just Eat Healthy With Food Network</h1>
